force-app/main/default/objects/MessagingSession/fields/LastEmotion__c.field-meta.xml
<CustomField>
    <fullName>LastEmotion__c</fullName>
    <label>Last Emotion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>