force-app/main/default/objects/MessagingSession/fields/LastEmotionReason__c.field-meta.xml
<CustomField>
    <fullName>LastEmotionReason__c</fullName>
    <label>Last Emotion Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>