force-app/main/default/objects/MessagingSession/fields/LastEmotionUpdated__c.field-meta.xml
<CustomField>
    <fullName>LastEmotionUpdated__c</fullName>
    <label>Last Emotion Updated</label>
    <type>DateTime</type>
</CustomField>