force-app/main/default/objects/MessagingSession/listViews/Messaging_MessagingSession.listView-meta.xml
<ListView>
    <fullName>Messaging_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Messaging</label>
    <queue>Messaging</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>